feat(vision): match places using web entities, labels, and keywords